--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,9 @@
   "projects": {
     "Biblioteca": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+      "style": "scss"
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
